--- a/MyShop/Areas/Admin/Views/PA/AddEdit.cshtml
+++ b/MyShop/Areas/Admin/Views/PA/AddEdit.cshtml
@@ -1,12 +1,25 @@
 ﻿@model PAVM
 @{
     ViewData["Title"] = "Add";
+	var action = Model.Id == 0 ? "Add" : "Edit";
 }
 
-<h1>Add</h1>
+<section class="dashboard">
+	<h2>@action</h2>
 
-<form asp-area="Admin" asp-controller="PA" asp-action="AddEdit">
-    <input type="text" asp-for="Name" />
-    <input type="text" name="values" value="@ViewBag.Values" />
-    <input type="submit" />
-</form>
+	<form asp-area="Admin" asp-controller="PA" asp-action="AddEdit">
+		<div class="floating-label-input">
+			<input type="text" asp-for="Name" class="form__input" />
+			<label class="label">Name</label>
+		</div>
+
+		<div class="floating-label-input">
+			<input type="text" name="values" value="@ViewBag.Values" class="form__input" />
+			<label class="label">Values</label>
+		</div>
+
+		<button type="submit" class="btn">@action</button>
+	</form>
+</section>
+
+
